fix: improve display of table filters on small screens

--- a/src/main/webapp/uii/templatePG/css/src/components/_tables-custom.scss
+++ b/src/main/webapp/uii/templatePG/css/src/components/_tables-custom.scss
@@ -163,7 +163,6 @@
   justify-content: flex-end;
   align-items: center;
   gap: var(--gap, 8px);
-  width: 84%;
 
   &__option {
     background-color: var(--clr-neutral-200);
@@ -201,10 +200,15 @@
   }
 }
 
-@media (max-width: 555px) {
-  .gw-table__filters {
-    width: 100%;
-    flex-wrap: wrap;
+.gw-table__filters__search-bar .input-group-text:has(.fa-search) {
+  padding: 0;
+  width: 0;
+}
+
+@media screen and (min-width: 660px) {
+  .gw-table__filters__search-bar .input-group-text:has(.fa-search) {
+    padding: 0.375rem 0.75rem;
+    width: auto;
   }
 }
 
